--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deepmerge": "^4.3.1",
     "expo": "~50.0.11",
     "expo-linear-gradient": "^12.7.2",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
